Fixing Skills table alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -33,8 +33,15 @@ a {
 
 .container-fluid {
 	background-color: #fff;
-	box-shadow: 0px -5px 50px #F0F8FF;
-							/*#f0f0f0*/
+	box-shadow: 0px -5px 50px #F0F0F0;
+							/*#F0F8FF*/
+}
+
+.left {
+	text-align:left;
+}
+.right {
+	text-align: right;
 }
 
 /* #Home
@@ -104,10 +111,24 @@ a {
 }
 
 
+/* Skills
+================================================== */
+.skill-table {
+	border ="0"; 
+	width = "100%";
+	height = "100%";
+	text-align: center;
+}
+
+.rating{
+	margin-left: 10px;
+	color:#e50000;
+	margin-right:10px;
+}
 
 
-
-
+/* Footer
+================================================== */
 #footer {
 	text-align: center;
 	padding: 10px 0px 10px 0px;
